--- a/welcome_page.html
+++ b/welcome_page.html
@@ -12,11 +12,12 @@
     </style>
 </head>
 <body>
-
+    <div class"ims_container">
     <div class="welcome_page">
         <h2>Welcome to SIC Intramurals 2025!</h2>
         <p>Stay updated on the latest events, schedules, and scores!</p>
         <button id="continue" onclick="nextpage()">Continue</button>
+    </div>
     </div>
 <script>
     function nextpage(){
