--- a/admin/index.html
+++ b/admin/index.html
@@ -225,7 +225,7 @@
                 <a href="">Forgot Password</a>
             </div>
             <div class="user-button">
-                <a href="" class="login-btn">
+                <a href="pages/dashboard.html" class="login-btn">
                     <span></span>
                     <span></span>
                     <span></span>
