--- a/admin/pages/dashboard.html
+++ b/admin/pages/dashboard.html
@@ -4,25 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IMS Dashboard</title>
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/header.css">
+    <link rel="stylesheet" href="../assets/css/sidebar.css">
+
+    <!-- Include Font Awesome CDN in your HTML file -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <style>
-        /* NavBar */
-        .header {
-            grid-area: header;
-            background-color: navy;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        /* End Navbar */
-
-        /* Sidebar */
-        .left-aside {
-            grid-area: left-aside;
-            /* Minimum width */
-            background-color: navy;
-        }
-
         /* End Sidebar*/
 
         /* Main Content */
@@ -31,12 +20,14 @@
             width: 100%;
             height: 100vh;
             background-color: grey;
+            transition: all 3s ease;
         }
 
         /* End Main Content */
         /* Low Content */
         .low-content {
             grid-area: low-content;
+            transition: width 0.3s ease;
         }
 
         /* End Low Content */
@@ -44,104 +35,46 @@
         /* Footer */
         .footer {
             grid-area: footer;
+            transition: width 0.3s ease;
         }
 
         /* End Footer */
 
 
 
-        * {
-            box-sizing: border-box;
-        }
 
-        body,
-        html {
-            margin: 0;
-            padding: 0;
-            overflow-x: hidden;
-        }
 
-        /* Responsive Layout */
-        .container {
-            position: relative;
-            display: grid;
-            grid-template-rows: 50px 1fr 30px 50px;
-            grid-template-columns: 50px 4fr;
-            height: 100vh;
-            /* grid-template-areas:
-                "left-aside header header"
-                "left-aside main right-aside"
-                "left-aside main right-aside"
-                "left-aside low-content right-aside"
-                "left-aside footer footer"; */
-            grid-gap: 10px;
-            font-weight: 600;
-            font-size: 20px;
-        }
 
-        /* Menu Button Functions */
-        .sidebar-show {
-            grid-template-areas:
-                "left-aside header "
-                "left-aside main "
-                "left-aside low-content "
-                "left-aside footer ";
-            grid-template-columns: 1fr 4fr;
-        }
-
-        .sidebar-hide {
-            grid-template-areas:
-                "left-aside header "
-                "left-aside main "
-                "left-aside low-content "
-                "left-aside footer ";
-            grid-template-columns: 60px 4fr;
-        }
-
-        @media (max-width: 678px) {
-            .container {
-                grid-template-rows: 50px 1fr 50px 50px;
-                grid-template-columns: 1fr;
-                grid-template-areas:
-                    "header"
-                    "main"
-                    "low-content"
-                    "footer";
-                padding: 10px;
-                /* Adjust padding for mobile view */
-            }
-
-            .left-aside {
-                position: fixed;
-                top: 0;
-                left: -100%;
-                /* Hidden by default */
-                height: 100%;
-                width: 60%;
-                background-color: green;
-                box-shadow: 2px 0 5px rgba(0, 0, 0, 0.3);
-                transition: left 0.3s ease;
-                z-index: 1000;
-                /* Ensures it appears on top */
-            }
-
-            .sidebar-show .left-aside {
-                left: 0;
-                /* Slide in */
-            }
-        }
 
         /* End Responsive Layout */
     </style>
 </head>
 
 <body>
-    <div class="container sidebar-hide">
+    <div class="ims_container">
         <header class="header">
-            <button onclick="toggleSidebar()">Hide</button>
-            Header
+            <div class="menu_button" onclick="toggleSidebar()"> &#9776;
+
+            </div>
+            <div class="site_name">
+                <a href="">Welcome to Admin Dashboard</a>
+            </div>
+            <div class="header_button">
+                Profile
+            </div>
+
         </header>
-        <aside class="left-aside">Sidebar<button onclick="toggleSidebar()">Hide</button>
+        <aside class="left-aside sidebar">
+            <div class="sidebar-header">
+                <h4>Logo</h4>
+            </div>
+            <ul class="sidebar-menu">
+                <li><i class="item_icon fas fa-home"></i><span class="menu-text">Home</span></li>
+                <li><i class="item_icon fas fa-user"></i><span class="menu-text">Profile</span></li>
+                <li><i class="item_icon fas fa-cogs"></i><span class="menu-text">Settings</span></li>
+                <li><i class="item_icon fas fa-envelope"></i><span class="menu-text">Messages</span></li>
+                <li><i class="item_icon fas fa-sign-out-alt"></i><span class="menu-text">Logout</span></li>
+            </ul>
         </aside>
         <main class="main">Main Content
             <h4>Welcome to admin Dashboard</h4>
@@ -153,19 +86,8 @@
 
 <script>
     function toggleSidebar() {
-        const container = document.querySelector('.container');
-        const sidebar = document.querySelector('.left-aside');
-        // Show sidebar
-        if (container.classList.contains('sidebar-hide')) {
-            container.classList.remove('sidebar-hide');
-            container.classList.add('sidebar-show');
-            //sidebar.style.display = 'block'; // Make the sidebar visible
-        } else {
-            container.classList.remove('sidebar-show');
-            container.classList.add('sidebar-hide');
-            // sidebar.style.display = 'none';
-            // sidebar.style.grid-area = 'left-aside';
-        }
+        const container = document.querySelector('.ims_container');
+        container.classList.toggle('sidebar-expand');
     }
 </script>
 
