--- a/admin/pages/dashboard2.html
+++ b/admin/pages/dashboard2.html
@@ -53,7 +53,9 @@
 <body>
     <div class="ims_container sidebar-expand">
         <header class="header">
-
+            <div class="menu_button" onclick="toggleSidebar()">
+                <i class="fa-solid fa-bars-staggered" id="btn"></i>
+            </div>
             <div class="center_header">
                 <div class="header_search_bar">
                     <input type="text">
@@ -70,7 +72,6 @@
                 <h4 class="header_text">SPORTS+</h4>
                 <div class="menu_button_container" onclick="toggleSidebar()">
                     <i class="fa-solid fa-bars-staggered" id="btn"></i>
-                    <!-- <button class="menu_button">&#9776;</button> -->
                 </div>
             </div>
             <ul class="sidebar-menu">
